--- a/App/Views/hotdetailnews.html
+++ b/App/Views/hotdetailnews.html
@@ -5,48 +5,11 @@
                 <div class="single_widget">
                     <h2>Hot News</h2>
                     <ul class="post_nav">
-                        <li class="odia-font" ng-repeat="hnews in hnewsTitle.HotNewsTitle">
+                        <li class="odia-font" ng-repeat="hnews in hnewsTitle">
                             <figure class="effect-lily">
                                 <a href="pages/single_page.html"><img src="images/270x150x4.jpg" alt=""></a>
-                                <figcaption><a href="#/hotnewsdetail/{{hnews.HID}}">{{hnews.TITLE}}</a></figcaption>
+                                <figcaption><a ng-click="getHopNewsByID(hnews.ndid)">{{hnews.newsdiv}}</a></figcaption>
                             </figure>
-                        </li>
-                    </ul>
-                </div>
-                <div class="single_widget">
-                    <h2>Popular Post</h2>
-                    <ul class="ppost_nav wow fadeInDown">
-                        <li>
-                            <div class="media">
-                                <a class="media-left" href="pages/single_page.html"><img src="images/70x70.jpg" alt=""></a>
-                                <div class="media-body">
-                                    <a class="catg_title" href="pages/single_page.html">Aliquam malesuada diam eget turpis varius</a>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="media">
-                                <a class="media-left" href="pages/single_page.html"><img src="images/70x70.jpg" alt=""></a>
-                                <div class="media-body">
-                                    <a class="catg_title" href="pages/single_page.html">Aliquam malesuada diam eget turpis varius</a>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="media">
-                                <a class="media-left" href="pages/single_page.html"><img src="images/70x70.jpg" alt=""></a>
-                                <div class="media-body">
-                                    <a class="catg_title" href="pages/single_page.html">Aliquam malesuada diam eget turpis varius</a>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="media">
-                                <a class="media-left" href="pages/single_page.html"><img src="images/70x70.jpg" alt=""></a>
-                                <div class="media-body">
-                                    <a class="catg_title" href="pages/single_page.html">Aliquam malesuada diam eget turpis varius</a>
-                                </div>
-                            </div>
                         </li>
                     </ul>
                 </div>
@@ -55,15 +18,48 @@
         <div class="col-lg-6 col-md-6 col-sm-8">
             <div class="middle_content">
                 <h2>What’s Hot</h2>
-                <ul class="ppost_nav wow fadeInDown">
-                    <li ng-repeat="dnews in hnewsDetail.hnews">
-                        <div class="media">
-                            <a class="media-left" href="#/detailhotnews/{{dnews.HID}}"><img ng-src="../UploadedImage/{{dnews.HotImg}}" alt="" height="170" width="170"></a>
-                            <div class="media-body"><a class="catg_title" href="#/detailhotnews/{{dnews.HID}}"><h3>{{dnews.TITLE}}</h3></a></div>
-                            <p class="odia-font">{{dnews.Hsub}}</p>
-                        </div>
-                    </li>
-                </ul>
+                <div class="single_page_area" ng-show="hnewssummary!=false">
+                    <ul class="featured_nav">
+                        <li class="wow fadeInDown">
+                            <figure class="featured_img"><a href="#"><img src="images/550x400.jpg" alt=""></a></figure>
+                            <h2 class="article_titile">
+                                {{hnewsDetail[0].htitle}}
+                            </h2>
+                            <div class="post_commentbox"><a href="#"><i class="fa fa-user"></i> Wpfreeware</a> <span><i class="fa fa-calendar"></i>{{hnewsDetail[0].newsdate}}</span> <a href="#"><i class="fa fa-tags"></i> Technology</a></div>
+                            <p class="odia-font">{{hnewsDetail[0].hotnews}}</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="middle_content" ng-show="tpnews!=false">
+                    <h2>New Stories</h2>
+                    <ul class="featured_nav">
+                        <li class="wow fadeInDown" ng-repeat="news in tnews">
+                            <figure class="featured_img"><a href="#"><img ng-src="../UploadedImage/{{news.timageurl}}" alt=""></a></figure>
+                            <article class="featured_article">
+                                <h2 class="article_titile"><a class="odia-font">{{news.ttitle}}</a></h2>
+                                <h4>{{news.tsub}}</h4>
+                                <div class="post_commentbox"><a href="#"><i class="fa fa-user"></i> Wpfreeware</a> <span><i class="fa fa-calendar"></i> {{news.newsdate}}</span> <a href="#"><i class="fa fa-tags"></i> Technology</a></div>
+                                <p class="odia-font">{{news.topnews}}</p>
+                            </article>
+                        </li>
+                    </ul>
+                    <pagination ng-model="currentPage" total-items="newsories.length" max-size="maxSize" boundary-links="true">
+                    </pagination>
+                </div>
+                <div class="middle_content" ng-show="hnews!=false">
+                    <ul class="featured_nav">
+                        <li class="wow fadeInDown" ng-repeat="news in hotnews">
+                            <figure class="featured_img"><a href="#"><img ng-src="../UploadedImage/{{news.himageurl}}" alt=""></a></figure>
+                            <article class="featured_article">
+                                <h2 class="article_titile"><a class="odia-font" ng-click="getHotNewsSummary(news.hnid)">{{news.htitle}}</a></h2>
+                                <h4>{{news.hsub}}</h4>
+                                <p class="odia-font">{{news.hotnews}}</p>
+                            </article>
+                        </li>
+                    </ul>
+                    <pagination ng-model="currentPage" total-items="newsories.length" max-size="maxSize" boundary-links="true">
+                    </pagination>
+                </div>
                 <nav>
                     <ul class="pagination">
                         <li><a href="#"><span aria-hidden="true">&laquo;</span><span class="sr-only">Previous</span></a></li>
@@ -88,132 +84,37 @@
                     <div class="tab-content">
                         <div role="tabpanel" class="tab-pane fade active in" id="mostPopular">
                             <ul class="ppost_nav wow fadeInDown">
-                                <li>
+                                <li ng-repeat="news in topstories | orderBy :'-newsid'">
                                     <div class="media">
                                         <a class="media-left" href="#"><img src="images/70x70.jpg" alt=""></a>
-                                        <div class="media-body"><a class="catg_title" href="#">Aliquam malesuada diam eget turpis varius</a></div>
-                                    </div>
-                                </li>
-
-                                <li>
-                                    <div class="media">
-                                        <a class="media-left" href="#"><img src="images/70x70.jpg" alt=""></a>
-                                        <div class="media-body"><a class="catg_title" href="#">Aliquam malesuada diam eget turpis varius</a></div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="media">
-                                        <a class="media-left" href="#"><img src="images/70x70.jpg" alt=""></a>
-                                        <div class="media-body"><a class="catg_title" href="#">Aliquam malesuada diam eget turpis varius</a></div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="media">
-                                        <a class="media-left" href="#"><img src="images/70x70.jpg" alt=""></a>
-                                        <div class="media-body"><a class="catg_title" href="#">Aliquam malesuada diam eget turpis varius</a></div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="media">
-                                        <a class="media-left" href="#"><img src="images/70x70.jpg" alt=""></a>
-                                        <div class="media-body"><a class="catg_title" href="#">Aliquam malesuada diam eget turpis varius</a></div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="media">
-                                        <a class="media-left" href="#"><img src="images/70x70.jpg" alt=""></a>
-                                        <div class="media-body"><a class="catg_title" href="#">Aliquam malesuada diam eget turpis varius</a></div>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                        <div role="tabpanel" class="tab-pane fade" id="recentComent">
-                            <ul class="ppost_nav wow fadeInDown">
-                                <li>
-                                    <div class="media">
-                                        <a class="media-left" href="pages/single_page.html"><img src="images/70x70.jpg" alt=""></a>
-                                        <div class="media-body"><a class="catg_title" href="pages/single_page.html">Aliquam malesuada diam eget turpis varius</a></div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="media">
-                                        <a class="media-left" href="pages/single_page.html"><img src="images/70x70.jpg" alt=""></a>
-                                        <div class="media-body"><a class="catg_title" href="#">Aliquam malesuada diam eget turpis varius</a></div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="media">
-                                        <a class="media-left" href="pages/single_page.html"><img src="images/70x70.jpg" alt=""></a>
-                                        <div class="media-body"><a class="catg_title" href="#">Aliquam malesuada diam eget turpis varius</a></div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="media">
-                                        <a class="media-left" href="#"><img src="images/70x70.jpg" alt=""></a>
-                                        <div class="media-body"><a class="catg_title" href="#">Aliquam malesuada diam eget turpis varius</a></div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="media">
-                                        <a class="media-left" href="#"><img src="images/70x70.jpg" alt=""></a>
-                                        <div class="media-body"><a class="catg_title" href="#">Aliquam malesuada diam eget turpis varius</a></div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="media">
-                                        <a class="media-left" href="#"><img src="images/70x70.jpg" alt=""></a>
-                                        <div class="media-body"><a class="catg_title" href="#">Aliquam malesuada diam eget turpis varius</a></div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="media">
-                                        <a class="media-left" href="#"><img src="images/70x70.jpg" alt=""></a>
-                                        <div class="media-body"><a class="catg_title" href="#">Aliquam malesuada diam eget turpis varius</a></div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="media">
-                                        <a class="media-left" href="#"><img src="images/70x70.jpg" alt=""></a>
-                                        <div class="media-body"><a class="catg_title" href="#">Aliquam malesuada diam eget turpis varius</a></div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="media">
-                                        <a class="media-left" href="#"><img src="images/70x70.jpg" alt=""></a>
-                                        <div class="media-body"><a class="catg_title" href="#">Aliquam malesuada diam eget turpis varius</a></div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="media">
-                                        <a class="media-left" href="#"><img src="images/70x70.jpg" alt=""></a>
-                                        <div class="media-body"><a class="catg_title" href="#">Aliquam malesuada diam eget turpis varius</a></div>
+                                        <div class="media-body"><a class="catg_title" href="#" ng-click="getTopNewsByID(news.newsid)">{{news.topnews}}</a></div>
                                     </div>
                                 </li>
                             </ul>
                         </div>
                     </div>
-                </div>
-                <div class="single_widget">
-                    <h2>Categories</h2>
-                    <ul>
-                        <li class="cat-item"><a href="#">Technology</a></li>
-                        <li class="cat-item"><a href="#">Games</a></li>
-                        <li class="cat-item"><a href="#">Business</a></li>
-                        <li class="cat-item"><a href="#">Gallery</a></li>
-                        <li class="cat-item"><a href="#">Slider</a></li>
-                        <li class="cat-item"><a href="#">Life &amp; Style</a></li>
-                        <li class="cat-item"><a href="#">Sports</a></li>
-                    </ul>
-                </div>
-                <div class="single_widget">
-                    <h2>Category Archive</h2>
-                    <select class="catgArchive">
-                        <option>Select Category</option>
-                        <option>Life styles</option>
-                        <option>Sports</option>
-                        <option>Technology</option>
-                        <option>Treads</option>
-                    </select>
+                    <div class="single_widget">
+                        <h2>Categories</h2>
+                        <ul>
+                            <li class="cat-item"><a href="#">Technology</a></li>
+                            <li class="cat-item"><a href="#">Games</a></li>
+                            <li class="cat-item"><a href="#">Business</a></li>
+                            <li class="cat-item"><a href="#">Gallery</a></li>
+                            <li class="cat-item"><a href="#">Slider</a></li>
+                            <li class="cat-item"><a href="#">Life &amp; Style</a></li>
+                            <li class="cat-item"><a href="#">Sports</a></li>
+                        </ul>
+                    </div>
+                    <div class="single_widget">
+                        <h2>Category Archive</h2>
+                        <select class="catgArchive">
+                            <option>Select Category</option>
+                            <option>Life styles</option>
+                            <option>Sports</option>
+                            <option>Technology</option>
+                            <option>Treads</option>
+                        </select>
+                    </div>
                 </div>
             </div>
         </div>
