--- a/App/Views/hotnews.html
+++ b/App/Views/hotnews.html
@@ -55,16 +55,19 @@
         <div class="col-lg-6 col-md-6 col-sm-8">
             <div class="middle_content">
                 <h2>What’s Hot</h2>
-                <ul class="featured_nav">
-                    <li class="wow fadeInDown">
-                        <figure class="featured_img"><a href="#"><img src="images/550x400.jpg" alt=""></a></figure>
-                        <article class="featured_article">
-                            <!--<div class="article_category"><a href="#">Technology <i class="fa fa-angle-right"></i></a><a href="#">Mobile <i class="fa fa-angle-right"></i></a><a href="#">Samsung</a></div>-->
-                            <h2 class="article_titile">{{hfnewsDetail.hnews[0].TITLE}}</h2>
-                            <p class="odia-font">{{hfnewsDetail.hnews[0].HotNews}}</p>
-                        </article>
-                    </li>
-                </ul>
+                {{detailNews}}
+                <div class="single_page_area" ng-show="hnews==true">
+                    <ul class="featured_nav">
+                        <li class="wow fadeInDown">
+                            <figure class="featured_img"><a href="#"><img src="images/550x400.jpg" alt=""></a></figure>
+                            <h2 class="article_titile">
+                                {{detailNews[0].htitle}}
+                            </h2>
+                            <div class="post_commentbox"><a href="#"><i class="fa fa-user"></i> Wpfreeware</a> <span><i class="fa fa-calendar"></i>{{detailNews[0].newsdate}}</span> <a href="#"><i class="fa fa-tags"></i> Technology</a></div>
+                            <p class="odia-font">{{detailNews[0].hotnews}}</p>
+                        </li>
+                    </ul>
+                </div>
                 <nav>
                     <ul class="pagination">
                         <li><a href="#"><span aria-hidden="true">&laquo;</span><span class="sr-only">Previous</span></a></li>
